--- a/static/stat120/Day22.html
+++ b/static/stat120/Day22.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Inference for multiple proportions</title>
+    <title>Inference for multiple proportions: One Categorical Variable</title>
     <meta charset="utf-8" />
     <meta name="author" content="Bastola" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -41,11 +41,11 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Inference for multiple proportions]
+# .fancy[Inference for multiple proportions: One Categorical Variable]
 
 ### .fancy[Stat 120]
 
- October 29 2023
+ November 01 2023
 
 ---
 
@@ -83,22 +83,6 @@ H_a : p \neq 1/3
   - Example: Are the three colors (orange, yellow, brown) of Reese’s Pieces equally likely?
 
 `\(H_0\)` specifies a proportion,  `\(p_i\)` , for each category.
-]
-
----
-
-class: middle
-
-# Test for one categorical variable
-
-
-.bqt[
-The proportions do not have to be the same. e.g: Grade distribution
-
-`\begin{align}
-H_0 &amp;:p_{A}=0.2, \quad p_{B}=0.3, \quad p_{C}=0.3, \quad p_{D}=0.1, \quad p_{F}=0.1\\
-H_a &amp;:\text{ at least one proportion different}
-\end{align}`
 ]
 
 ---
@@ -203,8 +187,9 @@ Expected | 28.33 | 28.33 | 28.33 | 85
 
 
 `\begin{aligned}
-\chi^2 &amp;= \frac{(36-28.33)^2}{28.33} + \cdots + \cdots\\
-&amp;\approx 2.076 + \cdots + \cdots
+\chi^2 &amp;= \frac{(36-28.33)^2}{28.33} + \frac{(12 - 28.33)^2}{28.33} + \frac{(37 - 28.33)^2}{28.33}\\
+&amp;= 2.076 + 9.379 + 2.628 \\
+&amp;= 14.083
 \end{aligned}`
 ]
 
@@ -517,7 +502,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_d875a1b9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_04f99bdd" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
