--- a/static/stat120/Day23.html
+++ b/static/stat120/Day23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Inference for multiple proportions</title>
+    <title>Inference for multiple proportions: Two Categorical Variables</title>
     <meta charset="utf-8" />
     <meta name="author" content="Bastola" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -43,11 +43,11 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Inference for multiple proportions]
+# .fancy[Inference for multiple proportions: Two Categorical Variables]
 
 ### .fancy[Stat 120]
 
- October 29 2023
+ October 31 2023
 
 ---
 
@@ -423,7 +423,8 @@ chisq.test(survey$religiousness, survey$comfortness,
 
 ```
 
-	Pearson's Chi-squared test with simulated p-value (based on 2000 replicates)
+	Pearson's Chi-squared test with simulated p-value (based on 2000
+	replicates)
 
 data:  survey$religiousness and survey$comfortness
 X-squared = 19.33, df = NA, p-value = 0.0009995
@@ -602,7 +603,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_d244c03a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_047bf10f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
