--- a/static/stat120/Day23.html
+++ b/static/stat120/Day23.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- October 31 2023
+ November 03 2023
 
 ---
 
@@ -603,7 +603,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_047bf10f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_6a671c1b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
