--- a/public/stat120/Day24.html
+++ b/public/stat120/Day24.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- October 29 2023
+ November 05 2023
 
 ---
 
@@ -313,6 +313,33 @@ How do we get this? Two options:
 
 ---
 
+# Simulation: `CarletonStats` R package
+
+
+
+```r
+library(CarletonStats)
+permTestAnova(Distance ~ Grip, data = frisbee)
+```
+
+```
+
+	** Permutation test **
+
+ Permutation test with alternative: greater 
+ Observed F statistic: 2.0453 
+ Mean of permutation distribution: 1.10846 
+ Standard error of permutation distribution: 1.2343 
+ P-value:  0.156 
+
+	*-------------*
+```
+
+&lt;img src="Day24_files/figure-html/unnamed-chunk-3-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
+
+
+
+---
 
 class: middle
 
@@ -395,7 +422,7 @@ ggplot(frisbee, aes(sample = Distance)) +
   theme(axis.text.x = element_text(size = 4))
 ```
 
-&lt;img src="Day24_files/figure-html/unnamed-chunk-5-1.svg" width="100%" /&gt;
+&lt;img src="Day24_files/figure-html/unnamed-chunk-6-1.svg" width="100%" /&gt;
 
 ]
 
@@ -423,8 +450,8 @@ Finger Out   Inverted     Normal
   4.174754   3.159453   3.943802 
 ```
 ]
-.pull-right[Check if:
-`$$\frac{\text{largest }s}{\text{smallest }s} &gt; 2$$`
+.pull-right[Ensure:
+`$$\frac{\text{largest }s}{\text{smallest }s} &lt; 2$$`
 ]
 
 ---
@@ -576,7 +603,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_82d63a68" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_a08c90ad" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
