--- a/static/stat120/Day24.html
+++ b/static/stat120/Day24.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- November 05 2023
+ November 06 2023
 
 ---
 
@@ -601,11 +601,11 @@ class: action
 - Feel free to talk to your neighbor
 ]
 ]
-]
 
-<div class="countdown" id="timer_a08c90ad" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+
+<div class="countdown" id="timer_6ab03f18" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
