--- a/public/stat220/Day1.html
+++ b/public/stat220/Day1.html
@@ -15,8 +15,8 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"<i class=\"fa fa-times-circle\" style=\"color: #F94144\"><\/i>"})</script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
     <script src="libs/countdown/countdown.js"></script>
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- March 27 2023
+ January 02 2024
 
 ---
 
@@ -56,7 +56,7 @@ class: middle
 .pull-left[
 
 .bq[
-- Second year at Carleton
+- Third year at Carleton
 - Originally from Nepal
 - Research in Bayesian computation and machine learning
 - Avid learner and traveler
@@ -134,6 +134,21 @@ class: middle
   + effective visualization
 ]
 
+---
+
+
+background-image: url("images/data_science.png")
+background-position: center
+background-size: 60%
+class: clear
+
+# Must have skill!!
+
+
+.footnote[Source, [click here](https://www.linkedin.com/pulse/crucial-role-data-science-age-generative-ai-call-learn-ceni-babaoglu-smioc/)]
+
+
+
 
 ---
 
@@ -186,7 +201,7 @@ class: middle
 
 .pull-right[
 
-![](https://media.giphy.com/media/1QhkRAFtcjO90zNZFi/giphy.gif)
+&lt;iframe src="https://giphy.com/embed/Tq8B3WOqXToBlrqClZ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen&gt;&lt;/iframe&gt;&lt;p&gt;&lt;a href="https://giphy.com/gifs/new-post-creative-Tq8B3WOqXToBlrqClZ"&gt;via GIPHY&lt;/a&gt;&lt;/p&gt;
 
 
 ]
@@ -205,13 +220,13 @@ class: middle
 
 # Class Pipelines
 
-.font140.center[[https://stat220-spring23.netlify.app](https://stat220-spring23.netlify.app)]
+.font140.center[[https://stat220-spring23.netlify.app](https://stat220-winter24.netlify.app)]
 
 
 .bql[
 
-- Please bookmark this page: should be checked multiple times a day
-- Most of the course information and schedule will be posted in [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Please bookmark this page: should be checked for tutorials and solutions to class activities.
+- Most of the course information and schedule will be posted in [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Use moodle for submitting class activity and seeing grades
 - Use Github for homework and projects
 ]
@@ -255,9 +270,9 @@ class: middle
 #  What you need to do next . ...
 
 .bq[
-- read the [Rstudio for Stat220](https://stat220-spring23.netlify.app/rstudio.html) page
-- read the [GitHub for Stat220](https://stat220-spring23.netlify.app/github.html) page
-- read the [Software for Stat220](https://stat220-spring23.netlify.app/software.html) page
+- read the [Rstudio for Stat220](https://stat220-winter24.netlify.app/rstudio.html) page
+- read the [GitHub for Stat220](https://stat220-winter24.netlify.app/github.html) page
+- read the [Software for Stat220](https://stat220-winter24.netlify.app/software.html) page
 ]
 
 
@@ -378,13 +393,13 @@ class: action, middle
 &lt;br&gt;
 .bq.font90[
 - Work on the class_activity_1.Rmd file
-- You can get the file from [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- You can get the file from [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Talk to your neighbor
-- Submit your compiled .pdf file to moodle
+- Remember to submit your compiled .pdf file to moodle by the deadline
 ]
 ]
 
-<div class="countdown" id="timer_2326bd1f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_9e6534dd" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
